--- a/templates/tablette/add.html.twig
+++ b/templates/tablette/add.html.twig
@@ -47,6 +47,7 @@
                             {{ form_row(tabletteForm.numero_serie) }}
                             {{ form_row(tabletteForm.emplacement) }}
                             {{ form_row(tabletteForm.entreprise) }}
+                            {{ form_row(tabletteForm.fournisseur) }}
                             {{ form_row(tabletteForm.etat) }}
                             {{ form_row(tabletteForm.date_installation) }}
                             {{ form_row(tabletteForm.date_achat) }}
